--- a/tehtava1.html
+++ b/tehtava1.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <style>
-            body {background-color: red;}
-            h1 {text-align: center;}
-            p {text-align: center; font-size: 200%}
-        </style>
+
         <title>HTML5</title>
         <meta charset="UTF-8">
         <meta name="viewport" connect="width=device-width, initial-scale=1.0">
@@ -13,28 +9,21 @@
     </head>
 
     <body>
-        <audio controls autoplay>
-            <source src="koputus.ogg" type="audio/ogg">
-            <source src="Sounds/koputus.mp3" type="audio/mp3">
-          </audio>Hear some knocking
      <h1>My homepage</h1>
-     <hr style="height:5px;border-width:0;color:black;background-color:black">
-     <div style="text-align: center;">
+
      <img src="Photos/koira.jpg" alt="koira logo">
     </div>
      <h1>About me</h1>
      <p>My name is Tapio Kylmämaa and i am student</p>
-     <h1>Favorite web sites</H1>
-     <a href="https://www.hltv.org/"><p style="text-align:center">HLTV</p></a>
+     <h1>My favorite web sites</H1>
+        <ol></ol>
+     <li><a href="https://www.hltv.org/">HLTV</a></li>
      <div>
-     <a href="https://www.nhl.com/fi"><p style="text-align:center">NHL</p></a>
+        <li><a href="https://www.nhl.com/fi">NHL</a></li>
      </div>
      <div>
-     <a href="https://fi.wikipedia.org/wiki/Koira"><p style="text-align:center">Koira(wikipedia)</p></a>
-    </div>
-     <p>Download this document by clicking the hyperlink below.</p>
-     <div>
-     <a href="test.docx"><p style="text-align:center">Documentti</p></a>
+        <li><a href="https://fi.wikipedia.org/wiki/Koira">Koira(wikipedia)</a></li>
+    </ol>
     </div>
     </body>
 
